--- a/drewillard-app/package.json
+++ b/drewillard-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "concert-tickets",
+  "name": "drewillard-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,7 +17,8 @@
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "stripe": "^17.4.0"
+    "stripe": "^17.4.0",
+    "amazon-ivs-player": "^1.24.0"
   },
   "devDependencies": {
     "@types/node": "^20",
