--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@stripe/react-stripe-js": "^3.0.0",
     "@stripe/stripe-js": "^5.2.0",
     "@supabase/supabase-js": "^2.46.2",
+    "amazon-ivs-player": "^1.24.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "stripe": "^17.4.0",
-    "amazon-ivs-player": "^1.24.0"
+    "stripe": "^17.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
